--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,6 +13,7 @@
     <!-- <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Eagle+Lake|Maven+Pro|Open+Sans|Oswald" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     
     <!--
