added styling to chat page

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css">
-    <link href="https://fonts.googleapis.com/css?family=Eagle+Lake|Maven+Pro|Open+Sans|Oswald" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Libre+Baskerville|Rubik|Taviraj|Trirong|Work+Sans" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     
     <!--
